Failed attempt at fixing blogs

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -10,10 +10,15 @@
       </ul>
     </div>
   <% end %>
-
+  
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title, id: :blog_title %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :topic_id %>
+    <%= form.text_field :topic_id %>
   </div>
 
   <div class="field">
