--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,23 @@
-<h1>Pages#contact</h1>
+<h1>My contacts:</h1>
 
-<p><%= number_to_phone "5555555555" %></p>
+<hr>
 
-<p><%= number_to_currency "200" %></p>
+<div class="row">
+ <div class="col-md-6">
+     <h3>Address</h3>
+     
+     <p>4403 Inverary Dr, Millcreek, UT 84124</p>
+     
+     <h3>Phone Number</h3>
+
+     <p><%= number_to_phone "801-230-3270" %></p>
+     
+     <h3>Email</h3>
+
+     <p><a href="mailto:giancarlosruck@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+ </div>
+ 
+ <div class="col-md-6">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d756.4812908675361!2d-111.85306421487034!3d40.67561784568747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x875261e307cf339b%3A0x1eaaca6ab5fcc1e5!2s4403+Inverary+Dr%2C+Millcreek%2C+UT+84124!5e0!3m2!1sen!2sus!4v1501173697040" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+ </div>
+</div>
