Updated styles for user edit page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+
+<hr>
+
+<p>I'm Giancarlos Ruck, an overstressed teenager who tries to balance his social and school life. 
+I have been taking Early Enrollment in Salt Lake Community College and will graduate with my associates degree the same year that I graduate Highschool.
+I like to play video games, draw, and workout. I also have a deep passion for film and like to create small skits and short films. 
+</p>
