--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+
 /*
  * Globals
  */
@@ -166,7 +167,7 @@ body {
 
 .card-block {
   color: black;
-  text_align: left;
+  text-align: left;
 }
 
 .auth-links a {
@@ -181,5 +182,18 @@ body {
   width: 22rem;
   margin: 0 auto;
   float: none;
-  margin-bottom: 10px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
