--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -8,5 +8,4 @@
 
 <%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %>
 
-<%= link_to 'Destroy Portfolio Items', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' 
-} if logged_in?(:site_admin) %>
+<%= link_to 'Destroy Portfolio Items', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
