--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 /*
  * Globals
@@ -123,7 +124,6 @@ h6,
  * Main column and sidebar layout
  */
 
-
 /* Sidebar modules for boxing content */
 
 .sidebar-module {
@@ -188,4 +188,12 @@ h6,
 
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+/*
+ * Footer
+ */
+
+.social-links li {
+  font-size: 2.5em;
 }
